tests/fixtures/valid/builtins/sorted.py
# Valid sorted() calls
# Auto-generated by scripts/generate_tests.py

b0_sorted_str = sorted("hello")
b1_sorted_bytes = sorted(b"hello")
b2_sorted_list = sorted([1, 2, 3])
b3_sorted_dict = sorted({"a": 1})
b4_sorted_set = sorted({1, 2, 3})

print("sorted() tests passed!")
