tests/fixtures/invalid/pow_none_dict_set.py
# Cannot call pow() with None, Dict[str, int], Set[int]
x = pow(None, {"a": 1}, {1, 2, 3})
